fix wrapline bug

--- a/client/asset/css/index.css
+++ b/client/asset/css/index.css
@@ -404,6 +404,8 @@ ol.linenums {
 .demo-line {
   font-style:italic;
   color: #ccc
+  word-wrap:break-word; 
+  word-break:break-all;
   }
 
 a.demo_highlight {
